--- a/process.ipynb
+++ b/process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "id": "f4e5d333-9056-4d31-b577-f5f5505dbd59",
    "metadata": {},
    "outputs": [],
@@ -55,6 +55,14 @@
     "d = list(json.loads(x) for x in open(fname, 'r', encoding='utf-8').read().strip().split('\\n'))\n",
     "df = pd.DataFrame(d)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a78dc0d4-9461-4b2d-802e-dc8136ca6805",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -3419,9 +3427,318 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ca8ac5b8-fbe7-40db-8e0c-2ad36bb31bea",
+   "metadata": {},
+   "source": [
+    "# re-sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "93024c75-035f-48b3-8413-ecce72b11005",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(d)\n",
+    "df['label_copy'] = df['label'].copy()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "3c76f669-669b-4db0-b641-fbd36c46cc5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>text</th>\n",
+       "      <th>label</th>\n",
+       "      <th>label_copy</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>原来是这样啊，又是一个新的道理，简直让我长知识了，七星连珠是很难得的一种现象，这个解析也太到位了</td>\n",
+       "      <td>[label_878402]</td>\n",
+       "      <td>label_878402</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>老师好厉害，咱就是说，老师，能不能，就是，研究一下能不能穿越🙏 代入感很强，我已经想穿越去...</td>\n",
+       "      <td>[label_878402]</td>\n",
+       "      <td>label_878402</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>这个七星连珠的现象居然真的存在，我只在小说上面看过，太神奇了吧，至于其他的我也不太懂，科学现...</td>\n",
+       "      <td>[label_878402]</td>\n",
+       "      <td>label_878402</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>应该听过张老师讲，这一个的人都会觉得特别的清晰吧，而且也明白七星连珠不会引发危害。 ​</td>\n",
+       "      <td>[label_878402]</td>\n",
+       "      <td>label_878402</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>七星连珠这不是应该是天文知识吗，怎么物理也可以，学霸的世界我果然不懂啊</td>\n",
+       "      <td>[label_878402]</td>\n",
+       "      <td>label_878402</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77309</th>\n",
+       "      <td>77309</td>\n",
+       "      <td>甘肃兰州2022年文化和自然遗产日主场城市活动亮点抢先看甘肃兰州2022年文化和自然遗产日主...</td>\n",
+       "      <td>[label_82331]</td>\n",
+       "      <td>label_82331</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77310</th>\n",
+       "      <td>77310</td>\n",
+       "      <td>《焦点访谈》 20220611 让文物活起来 国宝自己会“说话” 《焦点访谈》 202206...</td>\n",
+       "      <td>[label_82331]</td>\n",
+       "      <td>label_82331</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77311</th>\n",
+       "      <td>77311</td>\n",
+       "      <td>甘肃加大农机装备力量投入“三夏”生产网页链接</td>\n",
+       "      <td>[label_82331]</td>\n",
+       "      <td>label_82331</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77312</th>\n",
+       "      <td>77312</td>\n",
+       "      <td>小范书记们，村民都在等荐书 网页链接 ​​​</td>\n",
+       "      <td>[label_82331]</td>\n",
+       "      <td>label_82331</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77313</th>\n",
+       "      <td>77313</td>\n",
+       "      <td>主汛期洪涝、干旱风险高 甘肃坚持“宁可防空，不可空防” ​</td>\n",
+       "      <td>[label_82331]</td>\n",
+       "      <td>label_82331</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>117325 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          id                                               text  \\\n",
+       "0          0   原来是这样啊，又是一个新的道理，简直让我长知识了，七星连珠是很难得的一种现象，这个解析也太到位了   \n",
+       "1          1   老师好厉害，咱就是说，老师，能不能，就是，研究一下能不能穿越🙏 代入感很强，我已经想穿越去...   \n",
+       "2          2  这个七星连珠的现象居然真的存在，我只在小说上面看过，太神奇了吧，至于其他的我也不太懂，科学现...   \n",
+       "3          3        应该听过张老师讲，这一个的人都会觉得特别的清晰吧，而且也明白七星连珠不会引发危害。 ​   \n",
+       "4          4                七星连珠这不是应该是天文知识吗，怎么物理也可以，学霸的世界我果然不懂啊   \n",
+       "...      ...                                                ...   \n",
+       "77309  77309  甘肃兰州2022年文化和自然遗产日主场城市活动亮点抢先看甘肃兰州2022年文化和自然遗产日主...   \n",
+       "77310  77310  《焦点访谈》 20220611 让文物活起来 国宝自己会“说话” 《焦点访谈》 202206...   \n",
+       "77311  77311                             甘肃加大农机装备力量投入“三夏”生产网页链接   \n",
+       "77312  77312                             小范书记们，村民都在等荐书 网页链接 ​​​   \n",
+       "77313  77313                      主汛期洪涝、干旱风险高 甘肃坚持“宁可防空，不可空防” ​   \n",
+       "\n",
+       "                label    label_copy  \n",
+       "0      [label_878402]  label_878402  \n",
+       "1      [label_878402]  label_878402  \n",
+       "2      [label_878402]  label_878402  \n",
+       "3      [label_878402]  label_878402  \n",
+       "4      [label_878402]  label_878402  \n",
+       "...               ...           ...  \n",
+       "77309   [label_82331]   label_82331  \n",
+       "77310   [label_82331]   label_82331  \n",
+       "77311   [label_82331]   label_82331  \n",
+       "77312   [label_82331]   label_82331  \n",
+       "77313   [label_82331]   label_82331  \n",
+       "\n",
+       "[117325 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2 = df.explode('label_copy')\n",
+    "df2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "979f6d63-d70b-47f1-9a4a-db1b27743a78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_weight = (df2['label_copy'].value_counts() ** 0.5).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "85a3983d-ab0a-4353-a0e2-770022ead627",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_count = df2.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "d9bd5e3b-b59b-4eec-b6c9-585181620e14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "elem_weight = (df2['label_copy'].value_counts() ** 0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "1214aaf8-d9bf-494c-b7fc-1bfb30b2be68",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "label_1191241    1374\n",
+       "label_1008181    1360\n",
+       "label_1281707     929\n",
+       "label_472394      928\n",
+       "label_1515062     928\n",
+       "                 ... \n",
+       "label_1019030      14\n",
+       "label_1467721      14\n",
+       "label_1208167      14\n",
+       "label_1153966      14\n",
+       "label_1249672      14\n",
+       "Name: label_copy, Length: 1399, dtype: int64"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "select_count = ((elem_weight / total_weight) * sample_count + 0.5).apply(int)\n",
+    "select_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "13904a24-b8ac-45ca-92ff-cc933ff26852",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = next(iter(df2.groupby('label_copy')))[1].drop('label_copy', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "5954fd2f-70d5-4304-a270-2d466ad3863a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'id': '75689',\n",
+       "  'text': '这次高考真的语文还可以，数学是真绞尽脑汁啊，本来还想考心爱的吉林师范，本来我英语就不好，啊～孩子哭哭了 \\u200b\\u200b\\u200b',\n",
+       "  'label': ['label_1001687']},\n",
+       " {'id': '75690',\n",
+       "  'text': ' 快来带上这份快乐宝藏, 不只是小朋友,也是好朋友, 你心目中的儿童节最佳搭档是____? \\u200b\\u200b\\u200b',\n",
+       "  'label': ['label_1001687']},\n",
+       " {'id': '75691',\n",
+       "  'text': '各位鲤鱼抓紧时间跃龙门！正是年少正当时，未来可期！加油鸭！ \\u200b',\n",
+       "  'label': ['label_1001687']},\n",
+       " {'id': '75692',\n",
+       "  'text': '从小就很喜欢做小手工，是妈妈外婆那一代流传下来的缝纫技术，让我爱上这样的经典手艺，也让我保留了那颇有感触的那台用了几代人的缝纫机。 小的时候啊，是给妈妈买的洋娃娃做衣服、鞋子；长大后啊，我是给自己的女儿做衣服、做手工！ 将这一份从小到大的经典手艺付诸行动，真的很 ...全文',\n",
+       "  'label': ['label_1001687']},\n",
+       " {'id': '75693',\n",
+       "  'text': '@华为终端公司 ⛄️友情是一种信仰，让人充满力量。 ～和你们一起真的好开心。 \\u200b\\u200b\\u200b ～虎年友🈶晴天☀️️ \\u200b\\u200b\\u200b',\n",
+       "  'label': ['label_1001687']},\n",
+       " {'id': '75694',\n",
+       "  'text': '@华为终端公司 那一年高考结束的时候，爸爸和我去看了电影，逛街买了好多衣服，然后还一起去北京旅游了呢。好多年过去了，忙忙碌碌也没顾得上和爸爸时常的看看电影喝酒聊天。这一次就好好的陪爸爸逛街吃饭看电影旅行好好聊。爸爸满分💯 \\u200b\\u200b\\u200b',\n",
+       "  'label': ['label_1001687']},\n",
+       " {'id': '75695',\n",
+       "  'text': '@华为终端公司 💫无论什么年纪，有爸爸的爱好巴适💐 我也是爸的笨小孩🏡 幸福，在冬雪日里我爸做的杀猪菜里！ 晚上睡觉需要暖宝宝的时候 能吃上老家大东北的杀猪菜 和家人对饮，外面小雪纷飞，屋里热气腾腾，一家人围坐在一起吃饭聊天喝着小酒🍶 再一口血肠 五花肉 特别是酸 ...全文',\n",
+       "  'label': ['label_1001687']},\n",
+       " {'id': '75696',\n",
+       "  'text': '@华为终端公司 父母：常回家看看 爱人：包容、理解 子女：分享、倾听 朋友：一起吃吃喝喝啥的 \\u200b\\u200b\\u200b',\n",
+       "  'label': ['label_1001687']},\n",
+       " {'id': '75697',\n",
+       "  'text': '在生活中有许多不经意间的小美好，他总是不断的激励着我们，让我们有工作的信心去面对未来的挑战，给我们带来无穷的力量，相信自己也会变得更加优秀，加油 \\u200b\\u200b\\u200b',\n",
+       "  'label': ['label_1001687']},\n",
+       " {'id': '75698',\n",
+       "  'text': '@华为终端公司 我爸是个有趣的爸爸。超级开明&每天都笑眯眯的。。儿时爸爸常常带我看电影去游乐园。小时候超迷，我爸爸就常常给我买很多装备寓教于乐。家里还有很多COSPLAY的装备，感觉我自己像生活在的世界里，他们三 \\u200b\\u200b\\u200b',\n",
+       "  'label': ['label_1001687']},\n",
+       " {'id': '75699',\n",
+       "  'text': ' 我从小是爷爷奶奶带大的，最爱吃的是奶奶做的酸菜炖粉条，开始先把肥肉㸆出荤油来，然后放上葱姜蒜大料炝锅，在把酸菜切成细丝，配上一把红薯粉条，在切上点肥瘦相当的五花肉，全部放到锅里一起炖上30分钟，做好的酸菜炖粉条只要一接开锅盖，满屋子酸菜的清香和五花肉的肉香，可惜在 \\u200b ...',\n",
+       "  'label': ['label_1001687']}]"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.apply(lambda x: x.to_dict(), axis=1).tolist()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70381435-71c6-4eca-8955-070bdad9f9e5",
+   "id": "5071e8ec-f415-4a57-8218-ef472574bee8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f32affd4-d4a9-45ed-b4d7-3e4749fead8a",
    "metadata": {},
    "outputs": [],
    "source": []
