--- a/badcase.ipynb
+++ b/badcase.ipynb
@@ -924,9 +924,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "myconda",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "myconda"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -938,7 +938,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
